--- a/js-offers-client/src/Makefile
+++ b/js-offers-client/src/Makefile
@@ -1,7 +1,7 @@
 # src/Makefile for kp investor demo
 # Prefiat LLC for Klickpush
 
-demo: demo.js offers-router.js initial-prompt-view.js
+demo: demo.js offer-model.js claim-view.js initial-prompt-view.js offers-router.js
 
 %.js: %.coffee
 	coffee -c $<
