--- a/js-offers-client/src/Makefile
+++ b/js-offers-client/src/Makefile
@@ -1,7 +1,8 @@
 # src/Makefile for kp investor demo
 # Prefiat LLC for Klickpush
 
-demo: demo.js offer-model.js virtual-good-model.js claim-view.js initial-prompt-view.js thanks-view.js offers-router.js
+demo: demo.js offer-model.js virtual-good-model.js user-location-model.js \
+	claim-view.js initial-prompt-view.js thanks-view.js offers-router.js 
 
 %.js: %.coffee
 	coffee -c $<
