Fancybox displaying, but need some asynchronous init to get it 100% working

--- a/AngelJump/src/Makefile
+++ b/AngelJump/src/Makefile
@@ -1,7 +1,7 @@
 # src/Makefile for kp investor demo
 # Prefiat LLC for Klickpush
 
-demo: demo.js offer-model.js virtual-good-model.js user-location-model.js \
+demo: offer-model.js virtual-good-model.js user-location-model.js \
 	claim-view.js initial-prompt-view.js thanks-view.js offers-router.js 
 
 %.js: %.coffee
